# paper

./: .gitignore  README.md  pyproject.toml
config/: markets.yml
data/raw/: hs300_rdd_demo.csv  real_benchmarks.csv  real_events.csv  real_metadata.csv  sample_benchmarks.csv  sample_events.csv  sample_prices.csv
docs/: hs300_rdd_data_contract.md  literature_to_project_guide.md  paper_outline.md  real_data_notes.md
scripts/: _literature_runner.py  build_event_sample.py  build_price_panel.py  download_real_data.py  generate_research_report.py  generate_sample_data.py  make_figures_tables.py  match_controls.py  run_event_study.py  run_regressions.py  start_harris_gurel.py  start_hs300_rdd.py  start_hs300_style.py  start_literature_dashboard.py  start_shleifer.py
src/index_inclusion_research/: __init__.py  config.py  literature.py  literature_catalog.py
src/index_inclusion_research/analysis/: __init__.py  event_study.py  rdd.py  regressions.py
src/index_inclusion_research/loaders/: __init__.py  contracts.py  io.py
src/index_inclusion_research/outputs/: __init__.py  reports.py
src/index_inclusion_research/pipeline/: __init__.py  events.py  matching.py  panel.py
tests/: test_literature.py  test_literature_catalog.py  test_output_tables.py  test_pipeline.py  test_rdd.py  test_reporting.py
